[package]
name = "kpm-rs"           # 패키지 이름
version = "0.1.0"
authors = ["kyunghyunHan <ekfqlwcjswl@naver.com>"]
edition = "2021"
description = "Keep Process Manager: Cross-platform process manager in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kyunghyunHan/kpm"
keywords = ["process", "manager", "cross-platform", "rust"]
categories = ["command-line-utilities", "system-utilities"]

[dependencies]
