[package]
name = "kpm-rs"
version = "0.1.0"
authors = ["hangyeonghyeon"]
edition = "2021"
description = "Keep Process Manager: Cross-platform process manager in Rust"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kyunghyunHan/BigO"
keywords = ["process", "manager", "cross-platform", "rust"]
categories = ["command-line-utilities"]  # system-utilities -> command-line-utilities

[dependencies]
