[package]
name = "kpm-rs"
version = "0.1.1"
edition = "2021"
description = "Kubernetes Process Manager - systemd based PM2 alternative"
license = "MIT OR Apache-2.0"
repository = "https://github.com/kyunghyunHan/kpm-rs"
keywords = ["process-manager", "systemd", "pm2", "cli", "daemon"]
categories = ["command-line-utilities", "development-tools"]
authors = ["kyunghyunHan <ekfqlwcjswl@naver.com>"]
readme = "README.md"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
env_logger = "0.11"
anyhow = "1.0"
colored = "3.0.0"
tabled = "0.20"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "6.0"

[[bin]]
name = "kpm"
path = "src/main.rs"